--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,4 +103,15 @@ dependencies {
     implementation("io.coil-kt:coil:1.1.1")
 
     implementation platform('com.google.firebase:firebase-bom:32.1.0')
+
+    implementation 'com.google.mlkit:text-recognition:16.0.0'
+
+    // للترجمة
+    implementation 'com.google.mlkit:translate:17.0.1'
+
+    // مكتبة الكاميرا (اختياري حسب طريقتك)
+    implementation 'androidx.camera:camera-core:1.3.0'
+    implementation 'androidx.camera:camera-camera2:1.3.0'
+    implementation 'androidx.camera:camera-lifecycle:1.3.0'
+    implementation 'androidx.camera:camera-view:1.3.0'
 }
