--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,9 @@ dependencies {
     implementation 'androidx.test.ext:junit-ktx:1.1.5'
     implementation 'com.google.firebase:firebase-messaging-ktx:23.1.2'
     implementation 'androidx.preference:preference:1.1.1'
+    implementation 'com.google.mlkit:vision-common:17.3.0'
+    implementation 'com.google.android.gms:play-services-mlkit-text-recognition-common:19.1.0'
+    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:19.0.1'
 
 
     testImplementation 'junit:junit:4.13.2'
@@ -102,16 +105,16 @@ dependencies {
     //coil
     implementation("io.coil-kt:coil:1.1.1")
 
-    implementation platform('com.google.firebase:firebase-bom:32.1.0')
+    // ML Kit Arabic OCR
 
-    implementation 'com.google.mlkit:text-recognition:16.0.0'
+// CameraX
+    def camerax_version = "1.3.0"
+    implementation "androidx.camera:camera-core:$camerax_version"
+    implementation "androidx.camera:camera-camera2:$camerax_version"
+    implementation "androidx.camera:camera-lifecycle:$camerax_version"
+    implementation "androidx.camera:camera-view:$camerax_version"
 
-    // للترجمة
-    implementation 'com.google.mlkit:translate:17.0.1'
+// Image Picker
+    implementation 'androidx.activity:activity-ktx:1.8.0'
 
-    // مكتبة الكاميرا (اختياري حسب طريقتك)
-    implementation 'androidx.camera:camera-core:1.3.0'
-    implementation 'androidx.camera:camera-camera2:1.3.0'
-    implementation 'androidx.camera:camera-lifecycle:1.3.0'
-    implementation 'androidx.camera:camera-view:1.3.0'
 }
