--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,5 +119,6 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.16.0'
     kapt 'com.github.bumptech.glide:compiler:4.16.0'
+    implementation 'com.google.android.gms:play-services-ads:22.6.0' // تحقق من آخر إصدار متوفر
 
 }
